5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1674_1105.log
== TEST (2019-04-23 18:29:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:29:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:29:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:29:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:29:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:30:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
else:
	print(y)
print("Casa:", y)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:32:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Stark"
elif x.lower() == "leao":
	y = "Lannister"
elif x.lower() == "veado":
	y = "Baratheon"
elif x.lower() == "dragao":
	y = "Targaryen"
elif x.lower() == "rosa":
	y = "Tyrell"
elif x.lower() == "sol":
	y = "Martell"
elif x.lower() == "lula":
	y = "Greyjoy"
elif x.lower() == "esfolado":
	y = "Bolton"
elif x.lower() == "turta":
	y = "Tully"
print("Casa:", y)
else:
	print(y)

-- ERROR:
File "XXXX", line 25
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:35:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
		y = "Stark"
	else:
		if x.lower() == "leao":
			y = "Lannister"
		elif x.lower() == "veado":
			y = "Baratheon"
		elif x.lower() == "dragao":
			y = "Targaryen"
		elif x.lower() == "rosa":
			y = "Tyrell"
		elif x.lower() == "sol":
			y = "Martell"
		elif x.lower() == "lula":
			y = "Greyjoy"
		elif x.lower() == "esfolado":
			y = "Bolton"
		elif x.lower() == "turta":
			y = "Tully"
		print("Casa:", y)
else:
	print(y)

-- ERROR:
File "XXXX", line 8
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:37:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:37:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:37:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- EXECUTION TIME:
0.197817
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:38:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:38:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:38:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada:", x)
y = "Brasao invalido"
if x.lower() == "lobo":
	y = "Casa: Stark"
elif x.lower() == "leao":
	y = "Casa: Lannister"
elif x.lower() == "veado":
	y = "Casa: Baratheon"
elif x.lower() == "dragao":
	y = "Casa: Targaryen"
elif x.lower() == "rosa":
	y = "Casa: Tyrell"
elif x.lower() == "sol":
	y = "Casa: Martell"
elif x.lower() == "lula":
	y = "Casa: Greyjoy"
elif x.lower() == "esfolado":
	y = "Casa: Bolton"
elif x.lower() == "turta":
	y = "Casa: Tully"
print(y)

-- EXECUTION TIME:
0.127202
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
